syntax = "proto3";
package ie.gmit.ds;

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

/* Cathal Butler | G00346889 - Distributed Systems Project
 * Proto file which defines Services and messages
 */

// Service
service PasswordService {
    // Methods
    rpc hash (UserHashRequest) returns (UserHashResponse);
    rpc validate (ValidateRequest) returns (ValidateResponse);
}

// Message: UserInput -> what will be passed into the hash method
message UserHashRequest {
    int32 userId = 1;
    string password = 2;
}

// The response data from for the hash request
message UserHashResponse {
    int32 userId = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
} // End HashResponse Message

// Validate Request Message
message ValidateRequest {
    string password = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

// Validation Response
message ValidateResponse {
    bool validity = 1;
}